<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/songbook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/rounded"
        android:fontFamily="@font/daray"
        android:text="@string/songbook"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="120sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/email"
        android:layout_below="@+id/songbook"
        android:textColor="@color/black"
        android:fontFamily="@font/daray"
        android:textSize="30sp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/password"
        android:layout_below="@+id/email"
        android:textColor="@color/black"
        android:fontFamily="@font/daray"
        android:textSize="30sp"
        android:layout_marginVertical="10dp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:textAlignment="center"
        android:background="@drawable/toggle"
        android:fontFamily="@font/daray"
        android:layout_below="@+id/password"/>

    <TextView
        android:id="@+id/getin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:padding="8dp"
        android:textAlignment="center"
        android:text="@string/getin"
        android:background="@drawable/toggle"
        android:fontFamily="@font/daray"
        android:layout_below="@+id/login"/>

</RelativeLayout>