<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".opensong">


    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:maxWidth="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="10dp"
            app:srcCompat="@drawable/nota" />

        <TextView
            style="@style/TextStyleDaray"
            android:id="@+id/songname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/picture"
            android:textAlignment="center"
            android:textSize="40sp"
            android:padding="5dp"
            android:background="@null"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/autoscroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="22dp">

        <TextView
            style="@style/TextStyleDaray"
            android:id="@+id/autoscrolltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoscroll"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"/>

        <EditText
            style="@style/TextStyleDaray"
            android:id="@+id/autoscrollvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:inputType="text"
            android:background="@drawable/rec"
            android:layout_toEndOf="@+id/autoscrolltext"
            android:text="@string/autoscrollvalue"
            android:padding="12dp"/>

        <TextView
            style="@style/TextStyleDaray"
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@+id/autoscrollvalue"
            android:padding="10dp"
            android:text="@string/ok"
            android:visibility="gone"/>

        <TextView
            style="@style/TextStyleDaray"
            android:id="@+id/fontfam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ok"
            android:layout_marginStart="15dp"
            android:text="@string/fontfam"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"/>

        <ToggleButton
            style="@style/TextStyleDaray"
            android:id="@+id/togglebut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rec"
            android:layout_toEndOf="@+id/fontfam"
            android:layout_marginStart="5dp"
            android:textOff="@string/daray"
            android:textOn="@string/auto"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <TextView
        style="@style/TextStyleDaray"
        android:id="@+id/singer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/autoscroll"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="22dp"/>

    <TextView
        style="@style/TextStyleDaray"
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rec"
        android:layout_below="@+id/singer"
        android:layout_above="@+id/back"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:layout_marginHorizontal="22dp"
        android:overScrollMode="always"
        android:scrollHorizontally="false">
    </TextView>

    <ImageView
        android:id="@+id/delete"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/download"
        android:layout_marginEnd="1dp"
        app:srcCompat="@drawable/delete" />

    <ImageView
        android:id="@+id/download"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/minus"
        app:srcCompat="@drawable/downloadbut" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/minus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/plus"
        app:srcCompat="@drawable/minus" />

    <ImageView
        android:id="@+id/plus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/edit"
        app:srcCompat="@drawable/plus" />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/edit" />


</RelativeLayout>